--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="resetDescription">重置缩放</string>
     <string name="recordDescription">开始/暂停</string>
     <string name="hz">Hz</string>
-    <string name="manual_freq_name">手动频率</string>
+    <string name="manual_freq_name">手动频率：</string>
     <string name="manual_freq_tips">* 手动调整示波频率，仅对合成波形模式有效</string>
+    <string name="high_pass_name">高通滤波：</string>
+    <string name="low_pass_name">低通滤波：</string>
+    <string name="high_pass_tips">* 高通滤波器阈值系数，负数表示不滤波</string>
+    <string name="low_pass_tips">* 低通滤波器阈值系数，负数表示不滤波</string>
 </resources>
